test: creating new tets for SiblingPreconditions